# kp_proj

./: README.md
ai-ws/: .gitignore  README.md  client_test.py  env.example  main.py  prompt.txt  pyproject.toml  requirements.txt  start.py
canyon-ai-client/: .env.example  README.md  SETUP_GOOGLE_OAUTH.md  database-constraints.sql  package-lock.json  package.json
canyon-ai-client/app/: globals.css  layout.tsx  page.tsx
canyon-ai-client/app/api/quotes/: route.ts
canyon-ai-client/app/api/quotes/[id]/: route.ts
canyon-ai-client/app/auth/callback/: route.ts
canyon-ai-client/app/auth/logout/: route.ts
canyon-ai-client/app/dashboard/: layout.tsx  page.tsx
canyon-ai-client/app/dashboard/home/: page.tsx
canyon-ai-client/app/dashboard/quotes/: page.tsx
canyon-ai-client/app/dashboard/quotes/[id]/: page.tsx  quote-page-client.tsx
canyon-ai-client/app/login/: page.tsx
canyon-ai-client/app/signup/: page.tsx
canyon-ai-client/components/: app-sidebar.tsx  approval-flow-chart.tsx  approval-time-chart.tsx  chart-area-interactive.tsx  dashboard-sidebar.tsx  data-table.tsx  editable-quote-details.tsx  inline-editable.tsx  login-form.tsx  nav-documents.tsx  nav-main.tsx  nav-recent-chats.tsx  nav-user.tsx  quotes-stats-chart.tsx  section-cards.tsx  sign-out-button.tsx  signup-form.tsx  site-header.tsx
canyon-ai-client/components/providers/: auth-provider.tsx
canyon-ai-client/hooks/: use-workflow.ts
canyon-ai-client/lib/hooks/: use-auth.ts
canyon-ai-client/lib/supabase/: init-user.ts  middleware.ts  migrate-workflows.ts  quotes.ts  workflows.ts
(+7 files in other folders)
